Add code article, style code snippet

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-markdown": "^6.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "v6": "^0.0.0"
   }
 }
